force-app/main/default/objects/Equipments__c/Equipments__c.object-meta.xml
<CustomObject>
    <label>old Equipments</label>
    <nameField>
        <label>Equipments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>old Equipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>