force-app/main/default/objects/Equipments__c/fields/Contribution_from_other_sources__c.field-meta.xml
<CustomField>
    <fullName>Contribution_from_other_sources__c</fullName>
    <label>Contribution from other sources</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>