force-app/main/default/objects/Equipments__c/fields/Cost_of_maintenance_contract_per_year__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_maintenance_contract_per_year__c</fullName>
    <label>Cost of maintenance contract per year</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>