force-app/main/default/objects/Equipments__c/fields/Cost_per_item__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_item__c</fullName>
    <label>Cost per item</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>