force-app/main/default/objects/Equipments__c/fields/Duration_of_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Maintenance__c</fullName>
    <inlineHelpText>Contract (years)</inlineHelpText>
    <label>Duration of Maintenance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>