force-app/main/default/objects/Equipments__c/fields/Number_of_items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_items__c</fullName>
    <label>Number of items</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>