force-app/main/default/objects/Equipments__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>(Number_of_items__c *  Cost_per_item__c ) +
( Cost_of_maintenance_contract_per_year__c *  Duration_of_Maintenance__c ) -
 Contribution_from_other_sources__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>