force-app/main/default/objects/Equipments__c/fields/Type_of_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Equipment__c</fullName>
    <label>Type of Equipment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>